--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,8 @@ author: Rene Floor <pub@renefloor.nl>
 homepage: https://github.com/renefloor/flutter_cached_network_image
 
 environment:
-  sdk: ">=2.0.0-dev.28.0 <3.0.0"
+  sdk: ">=1.19.0 <3.0.0"
+  flutter: ">=0.4.1 <=1.8.3"
 
 dependencies:
   flutter:
