--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager: 
-    git:
-      url: https://github.com/zmcdlhydsnn/flutter_cached_network_image
+  flutter_cache_manager: ^1.1.1
 
 dev_dependencies:
   test: ^1.3.0
